# yolo5_caffe_hisi3559

./: README.md
04.multi-core-sample/: CMakeLists.txt  MakeFile_opencv.param  Makefile  Makefile.param
04.multi-core-sample/common/: sample_comm.h  sample_comm_ive.c  sample_comm_ive.h  sample_comm_nnie.c  sample_comm_nnie.h  sample_comm_svp.c  sample_comm_svp.h
04.multi-core-sample/common/back/: hi_dsp.h
04.multi-core-sample/dsp/: Makefile  sample_dsp_main  sample_dsp_main.c
04.multi-core-sample/dsp/sample/: sample_dsp.c  sample_dsp_main.h
04.multi-core-sample/hirt/: Makefile  Makefile.plugin.proposal  Makefile.plugin.proposal_without_permute  alexnet.modelgroup  readme.txt  rfcn.modelgroup  sample_runtime_release  ssd.modelgroup
04.multi-core-sample/hirt/include/: sample_runtime_classify.h  sample_runtime_define.h  sample_runtime_detection_rfcn.h  sample_runtime_detection_ssd.h  sample_runtime_group_rfcnalex.h  sample_runtime_group_tracker.h
04.multi-core-sample/hirt/resource/: 00000001.bgr  00000002.bgr  00000003.bgr  00000004.bgr  00000005.bgr  ILSVRC2012_val_00000023_227x227.bgr  dog_bike_car_300x300.bgr
04.multi-core-sample/hirt/src/: main.c  rfcn_alexnet.modelgroup  rfcn_goturn_alexnet_tracker.modelgroup  sample_runtime_classify.c  sample_runtime_detection_rfcn.c  sample_runtime_detection_ssd.c  sample_runtime_group_rfcnalex.c  sample_runtime_group_tracker.c
04.multi-core-sample/ive/: Makefile  sample_ive_main.c
04.multi-core-sample/ive/sample/: sample_ive_add.c  sample_ive_ann.c  (+12 more)
04.multi-core-sample/nnie/: Makefile  sample_nnie_main.c
(+83 files in other folders)
